# AdventOfCode

./: Pipfile  README.md  day1.py  day3.py  day5.py  day6.py  get_inputs.py  main.py  pyproject.toml
utils/: __init__.py  datastructures.py  inputs.py  puzzle.py
year2015/: __init__.py  day1.py  day2.py
year2017/: __init__.py  day1.py
year2017/tests/: test_day1.py
year2022/: __init__.py  day1.py  day10.py  day11.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py
year2022/tests/: test_day10.py  test_day11.py
year2023/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
year2023/tests/: test_day1.py  test_day2.py  test_day3.py  test_day4.py  test_day5.py  test_day6.py  test_day7.py  test_day8.py
year2024/: day1.py  day2.py  day3.py
year2024/tests/: test_day1.py  test_day2.py  test_day3.py
