[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "Advent of code solutions in python"
authors = ["Nicolas Meisberger <nicolas.meisberger@fintiba.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
matplotlib = "^3.8.2"
black = "^23.11.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
